after thorough testing, I've finally resolved the fallback issue for backdrop filter and background color.This commit ensures that the  blurry effect displays on all devices and browsers

--- a/index.css
+++ b/index.css
@@ -405,6 +405,9 @@ p{
             background-color: rgba(0, 0, 0, 0.2);
             -webkit-backdrop-filter: blur(5px);
         }
+        .screen-backdrop.ios-fallback {
+            filter: brightness(0.9);
+        }
     }
 }
     
